--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -120,11 +120,32 @@
   </div>
   <%# /FURIMAの特徴 %>
 
-  <%# 商品一覧 %>
+  <%#商品一覧 %>
   <div class='item-contents'>
     <h2 class='title'>ピックアップカテゴリー</h2>
-    <%= link_to '新規投稿商品', "#", class: "subtitle" %>
+    <%= link_to '新規投稿商品', "new_item_path", class: "subtitle" %>
     <ul class='item-lists'>
+        <%if @items.present?%>
+          <% @items.each do |item| %>
+          <li class ='list'>
+            <div class="content_post" style="background-image: url(<%= item.image %>);"> 
+               <%= image_tag item.image.variant(resize: '180x180') , class: 'item-image' if item.image.attached? %>
+                <div class='item-info'>
+                  <h3 class='item-name'>
+                    <%= item.name %>
+                  </h3>
+                  <div class='item-price'>
+                    <span><%= item.price %>円<br>(税込み)</span>
+                      <div class='star-btn'>
+                        <%= image_tag "star.png", class:"star-icon" %>
+                          <span class='star-count'>0</span>
+                      </div>
+                  </div>
+                </div>
+            </div>
+          </li>
+          <%end%>
+     
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
@@ -165,7 +186,7 @@
             商品を出品してね！
           </h3>
           <div class='item-price'>
-            <span>99999999円<br>(税込み)</span>
+            <span>9999999円<br>(税込み)</span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
@@ -182,8 +203,9 @@
 </div>
 <div class='purchase-btn'>
   <span class='purchase-btn-text'>出品する</span>
-  <a href="#">
+  <a href="items/new">
     <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-  </a>
+    </a>
 </div>
 <%= render "shared/footer" %>
+<% end %>
