--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -123,35 +123,15 @@
   <%#商品一覧 %>
   <div class='item-contents'>
     <h2 class='title'>ピックアップカテゴリー</h2>
-    <%= link_to '新規投稿商品', "new_item_path", class: "subtitle" %>
+    <%= link_to '新規投稿商品', new_item_path, class: "subtitle" %>
     <ul class='item-lists'>
         <%if @items.present?%>
           <% @items.each do |item| %>
           <li class ='list'>
-            <div class="content_post" style="background-image: url(<%= item.image %>);"> 
-               <%= image_tag item.image.variant(resize: '180x180') , class: 'item-image' if item.image.attached? %>
-                <div class='item-info'>
-                  <h3 class='item-name'>
-                    <%= item.name %>
-                  </h3>
-                  <div class='item-price'>
-                    <span><%= item.price %>円<br>(税込み)</span>
-                      <div class='star-btn'>
-                        <%= image_tag "star.png", class:"star-icon" %>
-                          <span class='star-count'>0</span>
-                      </div>
-                  </div>
-                </div>
-            </div>
-          </li>
-          <%end%>
-     
-
+          <%= link_to item_path(item.id) do %>
+            <div class= 'item-img-content'> 
+               <%= image_tag item.image, class: 'item-img' if item.image.attached? %>
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-      <li class='list'>
-        <%= link_to "#" do %>
-        <div class='item-img-content'>
-          <%= image_tag "item-sample.png", class: "item-img" %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
           <div class='sold-out'>
@@ -160,20 +140,23 @@
           <%# //商品が売れていればsold outを表示しましょう %>
 
         </div>
-        <div class='item-info'>
-          <h3 class='item-name'>
-            <%= "商品名" %>
-          </h3>
-          <div class='item-price'>
-            <span><%= "販売価格" %>円<br>(税込み)</span>
-            <div class='star-btn'>
-              <%= image_tag "star.png", class:"star-icon" %>
-              <span class='star-count'>0</span>
+         <div class='item-info'>
+            <h3 class='item-name'>
+              <%= item.name %>
+            </h3>
+            <div class='item-price'>
+              <span><%= item.price %>円<br>(税込み)</span>
+                <div class='star-btn'>
+                  <%= image_tag "star.png", class:"star-icon" %>
+                    <span class='star-count'>0</span>
+                </div>
             </div>
           </div>
-        </div>
-        <% end %>
+          </li>
+          <% end %>
+          <%end%>
       </li>
+      <% else %>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
       <%# 商品がない場合のダミー %>
@@ -195,10 +178,13 @@
         </div>
         <% end %>
       </li>
+      <% end %>
       <%# //商品がある場合は表示されないようにしましょう %>
       <%# /商品がない場合のダミー %>
     </ul>
   </div>
+
+
   <%# /商品一覧 %>
 </div>
 <div class='purchase-btn'>
@@ -208,4 +194,3 @@
     </a>
 </div>
 <%= render "shared/footer" %>
-<% end %>
